setup show and index views for the product controller

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,8 @@
-@pr
+<h1><%=@product.name %></h1>
+	<%=@product.kind %>  <br/>
+	<%=@product.description %> <br/>
+	<%=@product.artist %> <br/>
+	<%=@product.price %> <br/>
+	<%=@product.quantity %> <br/>
+	<%=@product.tagline %> <br/>
+	<img src="<%=@product.image.first %>">	<br/>
