--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% @products.each do |product| %>
-<%=link_to product.name, show_product_path(@product) %>, ><br/>
+<%=link_to product.name, product_path(product.id) %><br/>
 <%=product.kind %>  <br/>
 	<%=product.description %> <br/>
 	<%=product.artist %> <br/>
