--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,12 @@
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <p class="notice"><%= notice %></p>
+  	<ul class="hmenu">
+		<li><%= link_to "Products", root_path %></li>
+	  <li><%= render 'shared/registration_items' %></li>
+	  <li><%= render 'shared/login_items' %></li>
+	</ul>
+	 <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 </head>
 <body>
